# history_archive

./: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 1491687b9b3a_.py  1f2d0fb6bed9_.py  647db2103af8_.py  72803faa1739_.py  729a16289530_.py  73eca2721cce_.py  77ee5980b5a7_.py  847e0eae66aa_.py  abdf852c7f2f_.py  b0cd8ad6d3f9_.py  d2a77511c9a8_.py  e2cdcf7b3888_.py  ea874e21a6fa_.py  eca7eb6e8f4a_.py  f0f9b3b5742b_.py  f4744c3583c6_.py
src/archive/: app.py  config.py
src/archive/adapters/: __init__.py  pdf_adapter.py
src/archive/core/: __init__.py  base_entity.py  cache_service.py  repository.py  unit_of_work.py
src/archive/database/: __init__.py  engine.py  tables.py
src/archive/dependencies/: auth_dependencies.py
src/archive/domains/Class_collection/: __init__.py  model.py
src/archive/domains/Form_collection/: __init__.py  model.py
src/archive/domains/Type/: __init__.py  (+1 more)
src/archive/gateway/: urls.py
src/archive/integrations/: redis.py
src/archive/repository/: repository_factory.py
src/archive/views/: __init__.py  collection_views.py  document_views.py  notification_view.py  user_views.py
tests/end2end/handler/: conftest.py  test_document.py
tests/integration/repository/: conftest.py  test_document.py  test_phono_doc.py  test_photo_doc.py  test_video_doc.py
tests/unit/model/: conftest.py  test_document.py  test_phono_document.py  test_photo_document.py  test_video_document.py
tests/unit/service/: conftest.py  test_document.py  test_phono_doc.py  test_photo_doc.py  test_video_doc.py
(+112 files in other folders)
